# Term_project

./: 「ML2023Spring_HW1」的副本.ipynb
mainEdit/: CMakeLists.txt  main.cpp
pedestrian.h/: CMakeLists.txt  main.cpp
